# GaussMarkovSRS

./: .gitignore  README.md  pyproject.toml  wgfs2021.py
Data/Input/CCTF2021/: correlations.txt  inputs.xlsx
Data/Reference/: CCTF2017.txt  CCTF2017.xlsx  CCTF2021.txt  CCTF2021.xlsx  CCTF2021full-precision.txt
docs/source/: conf.py  index.md  installation.md  usage.md
docs/source/apidocs/: index.rst
docs/source/apidocs/gauss_markov_srs/: gauss_markov_srs.cross_index.md  gauss_markov_srs.gauss_markov.md  gauss_markov_srs.load.md  gauss_markov_srs.md  gauss_markov_srs.plot.md  gauss_markov_srs.postprocess.md  gauss_markov_srs.preprocess.md  gauss_markov_srs.print.md  gauss_markov_srs.save.md  gauss_markov_srs.utils.md
src/gauss_markov_srs/: __init__.py  cross_index.py  gauss_markov.py  load.py  parse.py  plot.py  postprocess.py  preprocess.py  print.py  save.py  utils.py
tests/: test_cross_index.py  test_gauss_markov.py  test_utils.py
