[tool.poetry]
name = "gauss-markov-srs"
version = "0.1.0"
description = ""
authors = ["Marco Pizzocaro <m.pizzocaro@inrim.it>"]
readme = "README.md"
packages = [{include = "gauss_markov_srs", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
pandas = "^2.2.2"
openpyxl = "^3.1.5"



[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"
ipython = "^8.27.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
hypothesis = "^6.112.1"


[tool.poetry.group.doc.dependencies]
sphinx = "^8.0.2"
sphinx-autodoc2 = "^0.5.0"
myst-parser = "^4.0.0"
sphinx-rtd-theme = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120